update model user and Build and test route of find all user using swagger.yaml with database redis
